<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:textSize="18sp"
              android:text="@string/label_vehicle_name"/>

    <EditText android:id="@+id/TxtVehicleName"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"/>

    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:textSize="18sp"
              android:text="@string/label_odometer_distance_units"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

        <RadioButton android:id="@+id/chkMiles"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Miles"/>

        <RadioButton android:id="@+id/chkKilometers"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Kilometers"/>
    </RadioGroup>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|right"
            android:paddingBottom="5dip">
    <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dip"
                android:text="@string/button_label_optional_info"/>

        <ImageButton android:id="@+id/btn_optional_info"
                     style="@style/PlusButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="7dip"
                     android:gravity="center_vertical|right"
                />
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/layout_additional_info"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:visibility="gone">
        <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:textSize="18sp"
              android:text="@string/label_vehicle_name"/>

    <EditText
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"/>
        <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:textSize="18sp"
              android:text="@string/label_vehicle_name"/>

    <EditText
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"/>
        </LinearLayout>

    <Button android:id="@+id/BtnAddVehicle" android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:text="Add Vehicle"></Button>
</LinearLayout>